--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -32,6 +32,9 @@ h4 {
 .bg-grey {
     background-color: #f6f6f6;
 }
+.bg-purple-pink {
+    background-color: #660033;
+}
 .logo-small {
     color: #660033;
     font-size: 50px;
@@ -50,6 +53,20 @@ h4 {
     height: 100%;
     margin-bottom: 10px;
 }
+#homepage button {
+    color: white;
+}
+#homepage button:hover {
+    color: #660033;
+    background-color: white;
+    border: 2px solid #660033;
+}
+#homepage a:hover {
+    color: #660033;
+}
+#homepage a:link {
+    text-decoration: none;
+}
 .carousel-control.right, .carousel-control.left {
     background-image: none;
     color: #660033;
@@ -59,6 +76,12 @@ h4 {
 }
 .carousel-indicators li.active {
     background-color: #660033;
+}
+#contact h2 {
+    color: white;
+}
+img {
+    border-radius: 4px;
 }
 .item h4 {
     font-size: 19px;
