--- a/notakto/static/css/style.css
+++ b/notakto/static/css/style.css
@@ -8,11 +8,12 @@ body {
     background: khaki;
 }
 
-.boards {
-    background: khaki;
+div.boards {
     max-width: 45%;
     margin: 5px;
     border: 5px;
+    position: relative;
+    display: inline-block;
 }
 
 .disabled {
