--- a/notakto/static/css/style.css
+++ b/notakto/static/css/style.css
@@ -6,14 +6,22 @@ img#hslogo {
 
 body {
     background: khaki;
+    margin: 15px;
+}
+
+div#frame {
+    display: block;
 }
 
 div.boards {
-    max-width: 45%;
-    margin: 5px;
-    border: 5px;
     position: relative;
+    margin: 5px;
     display: inline-block;
+    /*float: left;*/
+}
+
+div#0 {
+    float: left;
 }
 
 .disabled {
@@ -28,15 +36,12 @@ div.boards {
 
 .rules {
     font-size: 2em;
+    display: block;
 }
 
 span.emphasized {
     font-weight: bold;
     background-color: yellow;
-}
-
-canvas {
-    position: relative;
 }
 
 canvas.dead {
