--- a/static/css/grundy.css
+++ b/static/css/grundy.css
@@ -21,6 +21,19 @@
     padding: 5px;
 }
 
+table {
+    border-collapse: collapse;
+}
+
+table, th, td {
+   border: 2px solid black;
+}
+
+th, td {
+    padding: 15px;
+    text-align: right;
+}
+
 body {
   background: khaki;
   margin: 15px;
