--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -208,3 +208,11 @@ footer .glyphicon {
         font-size: 150px;
     }
 }
+
+.thumbnail {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 150px;
+    margin: 0 auto;
+}
